--- a/final/pom.xml
+++ b/final/pom.xml
@@ -8,6 +8,14 @@
     <groupId>com.example.guestbook</groupId>
     <artifactId>guestbook</artifactId>
     
+    <repositories>
+		<repository>
+			<id>maven-restlet</id>
+			<name>Public online Restlet repository</name>
+			<url>http://maven.restlet.com</url>
+		</repository> 
+    </repositories>
+    
 <!-- [START set_versions] -->
     <properties>
         <appengine.app.version>1</appengine.app.version>
@@ -25,6 +33,17 @@
 <!-- [END set_versions] -->
 
     <dependencies>
+    	<dependency>
+		  	<groupId>org.restlet.jse</groupId>
+		  	<artifactId>org.restlet</artifactId>
+		  	<version>2.3.1</version>
+		</dependency>
+		<dependency>
+		  	<groupId>org.restlet.jse</groupId>
+		  	<artifactId>org.restlet.ext.simple</artifactId>
+		  	<version>2.3.1</version>
+		</dependency>
+    	
         <!-- Compile/runtime dependencies -->
         <dependency>
             <groupId>com.google.appengine</groupId>
