--- a/final/src/main/webapp/WEB-INF/web.xml
+++ b/final/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,21 @@
     <welcome-file-list>
         <welcome-file>guestbook.jsp</welcome-file>
     </welcome-file-list>
+    
+    <servlet>
+    	<servlet-name>RestletServlet</servlet-name>
+        <servlet-class>org.restlet.ext.servlet.ServerServlet</servlet-class>
+        <init-param>
+        	<param-name>org.restlet.application</param-name>
+            <param-value>com.example.rest.FirstStepsApplication</param-value>
+        </init-param>
+    </servlet>
+
+    <!-- Catch all requests -->
+    <servlet-mapping>
+        <servlet-name>RestletServlet</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
 <!-- [END standard_mappings] -->
 
 <!-- [START Objectify] -->
